Rename the titles

--- a/src/main/terraform/gcloud/modules/duchy/duchy_dashboard.json.tmpl
+++ b/src/main/terraform/gcloud/modules/duchy/duchy_dashboard.json.tmpl
@@ -1,5 +1,5 @@
 {
-  "displayName": "OCMM Ops - Duchy ${duchy_name} ",
+  "displayName": "Halo Ops - Duchy ${duchy_name} ",
   "dashboardFilters": [],
   "labels": {},
   "mosaicLayout": {
